--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-i18next": "^15.0.2",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
+    "sass": "^1.80.6",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
