--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,6 @@ SQLALCHEMY_DATABASE_URI=sqlite:///market.db
 
 JWT_SECRET_KEY=super-secret
 
+STRIPE_SECRET_KEY=sk_test_xxxxx
+
+STRIPE_PUBLISHABLE_KEY=pk_test_xxxxx
