--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
     "@popperjs/core": "^2.11.8",
+    "@stripe/react-stripe-js": "^2.9.0",
+    "@stripe/stripe-js": "^4.10.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "i18next": "^23.15.2",
