--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
 bcrypt==4.2.0
 blinker==1.8.2
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
@@ -22,7 +24,10 @@ marshmallow-sqlalchemy==1.1.0
 packaging==24.1
 PyJWT==2.9.0
 python-dotenv==1.0.1
+requests==2.32.3
 SQLAlchemy==2.0.35
+stripe==11.2.0
 typing_extensions==4.12.2
+urllib3==2.2.3
 Werkzeug==3.0.4
 WTForms==3.1.2
