Added forget password functionality.
- Use flask-mail & itsdangerous to reset password.

- Added forget password & reset password pages and functionality.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,3 +9,15 @@ STRIPE_SECRET_KEY=sk_test_xxxxx
 STRIPE_PUBLISHABLE_KEY=pk_test_xxxxx
 
 API_PREFIX=/api/v1
+
+MAIL_SERVER=smtp.gmail.com
+
+MAIL_PORT=587
+
+MAIL_USERNAME=null1.app@gmail.com
+
+MAIL_PASSWORD=iysr fbil kzmc idzu
+
+MAIL_USE_TLS=False
+
+MAIL_DEFAULT_SENDER=null1.app@gmail.com 
