--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ Flask-Bcrypt==1.0.1
 Flask-Cors==5.0.0
 Flask-JWT-Extended==4.6.0
 Flask-Login==0.6.3
+Flask-Mail==0.10.0
 flask-marshmallow==1.2.1
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
