--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@popperjs/core": "^2.11.8",
     "@stripe/react-stripe-js": "^2.9.0",
     "@stripe/stripe-js": "^4.10.0",
+    "@tanstack/react-query": "^5.62.8",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "i18next": "^23.15.2",
